2006-02-08  Boris Daljevic  <boris@backbase.com>

        Reviewed and tweaked by Darin.

        - fix http://bugzilla.opendarwin.org/show_bug.cgi?id=6648
          Safari strips namespace prefix when using setAttribute(), but should treat it as part of name

        Test: fast/dom/Element/setAttribute-with-colon.html

        * khtml/xml/dom_elementimpl.h: (ElementImpl::setAttribute): Removed body
        * khtml/xml/dom_elementimpl.cpp: (ElementImpl::setAttribute): Changed code so that
        attribute is not parsed into prefix and local name.

2006-02-08  Justin Garcia  <justin.garcia@apple.com>

        Original patch by Graham Dennis, reviewed by me
        Changes made by me, reviewed by thatcher

        <http://bugzilla.opendarwin.org/show_bug.cgi?id=3982>
        webViewDidBeginEditing, webViewDidEndEditing notification methods not called on delegate

        * bridge/mac/MacFrame.h:
        * bridge/mac/MacFrame.mm:
        (WebCore::MacFrame::didBeginEditing):
        (WebCore::MacFrame::didEndEditing):
        * bridge/mac/WebCoreFrameBridge.h:
        * khtml/xml/DocumentImpl.cpp:
        (WebCore::DocumentImpl::didBeginEditing):
        (WebCore::DocumentImpl::didEndEditing):
        (WebCore::DocumentImpl::setFocusNode):
        * khtml/xml/DocumentImpl.h:
        * khtml/xml/dom_elementimpl.cpp:
        (WebCore::ElementImpl::focus):
        * page/Frame.h:
        (WebCore::Frame::didBeginEditing):
        (WebCore::Frame::didEndEditing):

2006-02-08  Mitz Pettel  <opendarwin.org@mitzpettel.com>

        Test: fast/block/positioning/relayout-on-position-change.html

        Reviewed by Hyatt.

        - fix http://bugzilla.opendarwin.org/show_bug.cgi?id=7095
          Removing positioning from an element does not relayout properly

        * rendering/render_object.cpp:
        (WebCore::RenderObject::setStyle): The second call to setNeedsLayoutAndMinMaxRecalc